agregando valores base que serna modificados

--- a/Targetitas/producto.html
+++ b/Targetitas/producto.html
@@ -56,16 +56,43 @@
                     </div>
                 </section>
                 <section>
-                    <div class="caja-producto" id="productos">	
+                    <div class="caja-producto" id="productos">
                         <div class="caja">
                             <img src="imagenes/cafes/cafe1.jpg">
                             <p class="idProducto">1</p>
-                            "<p class="nombreP">Cafè expreso</p>
-                            "<p class=\"descriP\">"+descri2+"</p>"+
-                            "<p class=\"precioP\">"+precio2+"</p>"+
-                            "<button class=\"añadirP\">Añadir</button>"+
-                            "</div>"
-	            </div>
+                            <p class="nombreP">Cafè expreso</p>
+                            <p class="descriP">Bebidas con los mejores granos de cafè 100% aràbica, 
+                                cuidadosamente seleccionados y tostados al màs puro estilo Starbucks.
+                            </p>
+                            <p class="precioP">11$</p>
+                            <button class="añadirP">Añadir</button>
+                        </div>
+                        <div class="caja">
+                            <img src="imagenes/cafes/cafe2.jpg">
+                            <p class="idProducto">2</p>
+                            <p class="nombreP">Tè matcha</p>
+                            <p class="descriP">Diferentes mezclas de tè Teavana para tus mejores infusiones</p>
+                            <p class="precioP">11$</p>
+                            <button class="añadirP">Añadir</button>
+                        </div>
+                        <div class="caja">
+                            <img src="imagenes/cafes/cafe3.jpg">
+                            <p class="idProducto">3</p>
+                            <p class="nombreP">Frapuccino</p>
+                            <p class="descriP">Bebidas refrescantes de hielo batido con una dulce basada de creama Starbucks,
+                                 leches o bebidas vegetales y nata montada. Puedes elegir entre diferentes variedades de sabores
+                            </p>
+                            <p class="precioP">11$</p>
+                            <button class="añadirP">Añadir</button>
+                        </div>
+                        <div class="caja">
+                            <img src="imagenes/cafes/cafe4.png">
+                            <p class="idProducto">4</p>
+                            <p class="nombreP">Chocolate</p>
+                            <p class="descriP">Descubre nuestros chocolates y sus mejores combinaciones, calientes o frìos...!Tù decides!</p>
+                            <button class="añadirP">Añadir</button>
+                        </div>
+	                </div>
                 </section>
             </article>
         </div>
