--- a/Targetitas/producto.html
+++ b/Targetitas/producto.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style/producto.css">
     <link rel="stylesheet" href="style/global.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/loginRegister/registro.js"></script>
     <script  src="js/index/index.js"></script>
@@ -60,7 +63,7 @@
                         <div class="caja">
                             <img src="imagenes/cafes/cafe1.jpg">
                             <p class="idProducto">1</p>
-                            <p class="nombreP">Cafè expreso</p>
+                            <h1 class="nombreP">Cafè expreso</h1>
                             <p class="descriP">Bebidas con los mejores granos de cafè 100% aràbica, 
                                 cuidadosamente seleccionados y tostados al màs puro estilo Starbucks.
                             </p>
@@ -70,7 +73,7 @@
                         <div class="caja">
                             <img src="imagenes/cafes/cafe2.jpg">
                             <p class="idProducto">2</p>
-                            <p class="nombreP">Tè matcha</p>
+                            <h1 class="nombreP">Tè matcha</h1>
                             <p class="descriP">Diferentes mezclas de tè Teavana para tus mejores infusiones</p>
                             <p class="precioP">11$</p>
                             <button class="añadirP">Añadir</button>
@@ -78,7 +81,7 @@
                         <div class="caja">
                             <img src="imagenes/cafes/cafe3.jpg">
                             <p class="idProducto">3</p>
-                            <p class="nombreP">Frapuccino</p>
+                            <h1 class="nombreP">Frapuccino</h1>
                             <p class="descriP">Bebidas refrescantes de hielo batido con una dulce basada de creama Starbucks,
                                  leches o bebidas vegetales y nata montada. Puedes elegir entre diferentes variedades de sabores
                             </p>
@@ -87,7 +90,7 @@
                         </div>
                         <div class="caja">
                             <img src="imagenes/cafes/cafe4.png">
-                            <p class="idProducto">4</p>
+                            <h1 class="idProducto">4</h1>
                             <p class="nombreP">Chocolate</p>
                             <p class="descriP">Descubre nuestros chocolates y sus mejores combinaciones, calientes o frìos...!Tù decides!</p>
                             <button class="añadirP">Añadir</button>
