--- a/Targetitas/producto.html
+++ b/Targetitas/producto.html
@@ -61,35 +61,40 @@
                 <section>
                     <div class="caja-producto" id="productos">
                         <div class="caja">
-                            <img src="imagenes/cafes/cafe1.jpg">
+                            <div class="caja-imagen">
+                                <img src="imagenes/cafes/cafe1.jpg">
+                            </div>
                             <p class="idProducto">1</p>
                             <h1 class="nombreP">Cafè expreso</h1>
                             <p class="descriP">Bebidas con los mejores granos de cafè 100% aràbica, 
                                 cuidadosamente seleccionados y tostados al màs puro estilo Starbucks.
                             </p>
-                            <p class="precioP">11$</p>
                             <button class="añadirP">Añadir</button>
                         </div>
                         <div class="caja">
-                            <img src="imagenes/cafes/cafe2.jpg">
+                            <div class="caja-imagen">
+                                <img src="imagenes/cafes/cafe2.jpg">
+                            </div>
                             <p class="idProducto">2</p>
                             <h1 class="nombreP">Tè matcha</h1>
                             <p class="descriP">Diferentes mezclas de tè Teavana para tus mejores infusiones</p>
-                            <p class="precioP">11$</p>
                             <button class="añadirP">Añadir</button>
                         </div>
                         <div class="caja">
-                            <img src="imagenes/cafes/cafe3.jpg">
+                            <div class="caja-imagen">
+                                <img src="imagenes/cafes/cafe3.jpg">
+                            </div>
                             <p class="idProducto">3</p>
                             <h1 class="nombreP">Frapuccino</h1>
                             <p class="descriP">Bebidas refrescantes de hielo batido con una dulce basada de creama Starbucks,
                                  leches o bebidas vegetales y nata montada. Puedes elegir entre diferentes variedades de sabores
                             </p>
-                            <p class="precioP">11$</p>
                             <button class="añadirP">Añadir</button>
                         </div>
                         <div class="caja">
-                            <img src="imagenes/cafes/cafe4.png">
+                            <div class="caja-imagen">
+                                <img src="imagenes/cafes/cafe4.jpg">
+                            </div>
                             <h1 class="idProducto">4</h1>
                             <p class="nombreP">Chocolate</p>
                             <p class="descriP">Descubre nuestros chocolates y sus mejores combinaciones, calientes o frìos...!Tù decides!</p>
