modificacion casi terminada, solo falta la parte del boton añadir

--- a/Targetitas/producto.html
+++ b/Targetitas/producto.html
@@ -69,7 +69,9 @@
                             <p class="descriP">Bebidas con los mejores granos de cafè 100% aràbica, 
                                 cuidadosamente seleccionados y tostados al màs puro estilo Starbucks.
                             </p>
-                            <button class="añadirP">Añadir</button>
+                            <div class="caja-boton">
+                                <button class="añadirP">Añadir</button>
+                            </div>
                         </div>
                         <div class="caja">
                             <div class="caja-imagen">
@@ -78,7 +80,9 @@
                             <p class="idProducto">2</p>
                             <h1 class="nombreP">Tè matcha</h1>
                             <p class="descriP">Diferentes mezclas de tè Teavana para tus mejores infusiones</p>
-                            <button class="añadirP">Añadir</button>
+                            <div class="caja-boton">
+                                <button class="añadirP">Añadir</button>
+                            </div>
                         </div>
                         <div class="caja">
                             <div class="caja-imagen">
@@ -89,16 +93,20 @@
                             <p class="descriP">Bebidas refrescantes de hielo batido con una dulce basada de creama Starbucks,
                                  leches o bebidas vegetales y nata montada. Puedes elegir entre diferentes variedades de sabores
                             </p>
-                            <button class="añadirP">Añadir</button>
+                            <div class="caja-boton">
+                                <button class="añadirP">Añadir</button>
+                            </div>
                         </div>
                         <div class="caja">
                             <div class="caja-imagen">
                                 <img src="imagenes/cafes/cafe4.jpg">
                             </div>
-                            <h1 class="idProducto">4</h1>
-                            <p class="nombreP">Chocolate</p>
+                            <p class="idProducto">4</p>
+                            <h1 class="nombreP">Chocolate</h1>
                             <p class="descriP">Descubre nuestros chocolates y sus mejores combinaciones, calientes o frìos...!Tù decides!</p>
-                            <button class="añadirP">Añadir</button>
+                            <div class="caja-boton">
+                                <button class="añadirP">Añadir</button>
+                            </div>
                         </div>
 	                </div>
                 </section>
